--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -16,8 +16,7 @@
   <div class="page">
 
     <div class="contents">
-      <!-- <ng-content select=".content"> -->
-        contents
+      <ng-content select=".content"></ng-content>
     </div>
 
     <footer>
