--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,1 +1,28 @@
-<p>page-list-orders works!</p>
+<div class="table-responsive">
+  <!-- {{ collection | json }} -->
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Type</th>
+        <th scope="col">Client</th>
+        <th scope="col">NbJours</th>
+        <th scope="col">TjmHT</th>
+        <th scope="col">Total HT</th>
+        <th scope="col">Total TTC</th>
+        <th scope="col">State</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of collection">
+        <td>{{ item.typePresta }}</td>
+        <td>{{ item.client }}</td>
+        <td>{{ item.nbJours }}</td>
+        <td>{{ item.tjmHt | currency: 'EUR' }}</td>
+        <td>{{ item | total | currency: 'EUR' }}</td>
+        <td>{{ item.totalTtc() | currency: 'EUR' }}</td>
+        <td>{{ item.state }}</td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
