--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,29 +1,17 @@
-<div class="table-responsive">
-  <!-- {{ collection | json }} -->
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col" *ngFor="let item of headers">{{ item }}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of collection$ | async">
-        <td>{{ item.typePresta }}</td>
-        <td>{{ item.client }}</td>
-        <td>{{ item.nbJours }}</td>
-        <td>{{ item.tjmHt | currency: 'EUR' }}</td>
-        <td>{{ item | total | currency: 'EUR' }}</td>
-        <td>{{ item | total: 'ttc' | currency: 'EUR' }}</td>
-        <td [appState]="item.state">
-          <select (change)="changeState(item, $event)">
-            <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
-            <!-- <option value="Option">Option</option>
-            <option selected="true" value="Annulé">Annulé</option>
-            <option value="Confirmé">Confirmé</option> -->
-          </select>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<app-table-light [headers]="headers">
 
-</div>
+  <tr *ngFor="let item of collection$ | async">
+    <td>{{ item.typePresta }}</td>
+    <td>{{ item.client }}</td>
+    <td>{{ item.nbJours }}</td>
+    <td>{{ item.tjmHt | currency: 'EUR' }}</td>
+    <td>{{ item | total | currency: 'EUR' }}</td>
+    <td>{{ item | total: 'ttc' | currency: 'EUR' }}</td>
+    <td [appState]="item.state">
+      <select (change)="changeState(item, $event)">
+        <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
+      </select>
+    </td>
+  </tr>
+
+</app-table-light>
