--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,17 +1,22 @@
-<app-table-light [headers]="headers">
+<app-template-a [title]="title" [subtitle]="subtitle">
 
-  <tr *ngFor="let item of collection$ | async">
-    <td>{{ item.typePresta }}</td>
-    <td>{{ item.client }}</td>
-    <td>{{ item.nbJours }}</td>
-    <td>{{ item.tjmHt | currency: 'EUR' }}</td>
-    <td>{{ item | total | currency: 'EUR' }}</td>
-    <td>{{ item | total: 'ttc' | currency: 'EUR' }}</td>
-    <td [appState]="item.state">
-      <select (change)="changeState(item, $event)">
-        <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
-      </select>
-    </td>
-  </tr>
+  <app-table-light [headers]="headers">
 
-</app-table-light>
+    <tr *ngFor="let item of collection$ | async">
+      <td>{{ item.typePresta }}</td>
+      <td>{{ item.client }}</td>
+      <td>{{ item.nbJours }}</td>
+      <td>{{ item.tjmHt | currency: 'EUR' }}</td>
+      <td>{{ item | total | currency: 'EUR' }}</td>
+      <td>{{ item | total: 'ttc' | currency: 'EUR' }}</td>
+      <td [appState]="item.state">
+        <select (change)="changeState(item, $event)">
+          <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
+        </select>
+      </td>
+    </tr>
+
+  </app-table-light>
+
+</app-template-a>
+
