--- a/src/app/shared/components/table-dark/table-dark.component.scss
+++ b/src/app/shared/components/table-dark/table-dark.component.scss
@@ -8,6 +8,22 @@
     background: $color-success;
   }
   .state-option {
-    background: $color1;
+    background: $color3;
+  }
+}
+
+app-template-a {
+  #table-dark {
+    .state-option {
+      background: $color2;
+    }
+  }
+}
+
+app-template-b {
+  #table-dark {
+    .state-option {
+      background: $color1;
+    }
   }
 }
