delete and Subject

--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -14,6 +14,9 @@
           <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
         </select>
       </td>
+      <td>
+        <app-delete (click)="delete(item)"></app-delete>
+      </td>
     </tr>
 
   </app-table-light>
