--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -2,7 +2,7 @@
 
   <app-table-light [headers]="headers">
 
-    <tr *ngFor="let item of collection$ | async">
+    <tr *ngFor="let item of collection$ | async" (click)="detail(item)">
       <td>{{ item.typePresta }}</td>
       <td>{{ item.client }}</td>
       <td>{{ item.nbJours }}</td>
@@ -10,12 +10,13 @@
       <td>{{ item | total | currency: 'EUR' }}</td>
       <td>{{ item | total: 'ttc' | currency: 'EUR' }}</td>
       <td [appState]="item.state">
-        <select (change)="changeState(item, $event)">
+        <select (change)="changeState(item, $event)" (click)="$event.stopPropagation()">
           <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
         </select>
       </td>
       <td>
         <app-delete (click)="delete(item)"></app-delete>
+        <app-icon-edit (click)="edit(item)"></app-icon-edit>
       </td>
     </tr>
 
@@ -24,6 +25,16 @@
   <app-btn [label]="btnRoute.label" [route]="btnRoute.route"></app-btn>
   <app-btn [label]="btnHref.label" [href]="btnHref.href"></app-btn>
   <app-btn [label]="btnAction.label" [action]="btnAction.action" (clicked)="action()"></app-btn>
+
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="detail" routerLinkActive='active'>Détail</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="comment" routerLinkActive='active'>Comment</a>
+    </li>
+  </ul>
+  <router-outlet></router-outlet>
 
 </app-template-a>
 
